# codex-dot-companion

./: .gitignore  CHANGELOG.md  LAUNCH.md  LICENSE  README.md  install.sh  pyproject.toml
scripts/: install_hooks.py
src/codex_dot_companion/: __init__.py  __main__.py  agent_mascot_preview.html  codex_dot.py  hook_installer.py  install.py
