[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "codex-dot-companion"
version = "0.1.4"
description = "Tiny desktop mascot overlay for Codex sessions."
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "okj" }]
license = "MIT"
license-files = ["LICENSE"]
keywords = ["codex", "openai", "gtk", "desktop", "overlay", "mascot", "cli"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: X11 Applications :: GTK",
  "Intended Audience :: Developers",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Desktop Environment",
  "Topic :: Software Development",
  "Topic :: Utilities",
]

[project.urls]
Homepage = "https://github.com/okj1223/codex-dot-companion"
Repository = "https://github.com/okj1223/codex-dot-companion"
Issues = "https://github.com/okj1223/codex-dot-companion/issues"
Changelog = "https://github.com/okj1223/codex-dot-companion/blob/main/CHANGELOG.md"

[project.scripts]
codex-dot = "codex_dot_companion.codex_dot:main"
codex-dot-install = "codex_dot_companion.install:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
codex_dot_companion = ["agent_mascot_preview.html"]
